feat: added github links

--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
     <iframe src="https://see.ntc.net.np/" class="see-website"></iframe>
 
     <footer class="footer">
-      Made with love by Trishan Wagle
+      Made with love by
+
+      <a href="https://github.com/trishan9" target="_blank" class="link">
+        Trishan Wagle
+      </a>
     </footer>
   </div>
 </body>
